refactor: Attendaces -> AttendanceLog 클래스명 변경